# vim-dictionary

./: README.md  docker-compose.yml  package-lock.json
vim-dictionary-frontend/: Dockerfile  jest.config.ts  package-lock.json  package.json
vim-dictionary-frontend/src/__tests__/: Home.test.tsx  dictionaryService.test.tsx  entryService.test.tsx  sectionService.test.tsx  userService.test.tsx
vim-dictionary-frontend/src/components/: AddDictionaryPrompt.tsx  AddEntryPrompt.tsx  AddSectionPrompt.tsx  DeleteDictionaryPrompt.tsx  DeleteEntryPrompt.tsx  DeleteSectionPrompt.tsx  EditDictionaryPrompt.tsx  EditEntryPrompt.tsx  EditSectionPrompt.tsx  EntriesModal.tsx  LoadingOverlay.tsx  LoginModal.tsx  LogoutModal.tsx  Modal.tsx  SignupModal.tsx
vim-dictionary-frontend/src/data/: default-dictionary.tsx
vim-dictionary-frontend/src/pages/: index.tsx
vim-dictionary-frontend/src/services/: dictionaryService.tsx  entryService.tsx  sectionService.tsx  userService.tsx
vim-dictionary-frontend/src/styles/: AddDictionaryPrompt.module.ts  DeleteDictionaryPrompt.module.ts  EditDictionaryPrompt.module.ts  EntriesModal.module.ts  LoadingOverlay.module.ts  Modal.module.css  index.module.ts
vim_dictionary_backend/: .env.sample  Cargo.toml  Dockerfile  heroku.yml
vim_dictionary_backend/src/: config.rs  main.rs  models.rs
vim_dictionary_backend/src/controllers/: dictionaries.rs  entries.rs  mod.rs  sections.rs  users.rs
