[package]
name = "vim_dictionary_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0-beta.10"
actix-cors = "0.6"
dotenv = "0.15.0"
sqlx = { version = "0.5", features = ["postgres", "runtime-actix-rustls"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }

